<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/tv_detail_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_string"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginTop="8dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/iv_detail_home_team_badge"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginEnd="32dp"/>

            <TextView
                    android:id="@+id/tv_detail_home_score"
                    android:text="@string/null_string"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_vs"
                    android:text="@string/vs"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/tv_detail_away_score"
                    android:text="@string/null_string"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/iv_detail_away_team_badge"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="42dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_home_team_name"
                    android:text="@string/detail_home_team_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="32dp"
                    android:gravity="center_horizontal"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/tv_away_team_name"
                    android:text="@string/detail_away_team_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_horizontal"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorViewLine"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_home_goal_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_string"
                android:layout_weight="4"
                android:textSize="12sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_goals"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"/>

        <TextView
                android:id="@+id/tv_away_goal_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_string"
                android:layout_weight="4"
                android:textSize="12sp"
                android:textColor="@color/colorTextPrimary"
                android:textAlignment="textEnd"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>

    </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorViewLine"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_home_shots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_string"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_shots"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"/>

        <TextView
                android:id="@+id/tv_away_shots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_string"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>

    </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorViewLine"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_lineups"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorTextPrimary"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_home_goalkeeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_goalkeeper"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"/>

        <TextView
                android:id="@+id/tv_away_goalkeeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>

    </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_home_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_defense"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/tv_away_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_home_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_midfield"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/tv_away_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_home_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_forward"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/tv_away_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_home_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_substitutes"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/tv_away_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>